--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
-    "@dosomething/eslint-config": "^3.1.0"
+    "@dosomething/eslint-config": "^3.1.0",
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1",
+    "socket.io-client": "^2.0.3"
   }
 }
