--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@dosomething/babel-config": "^1.0.0",
     "@dosomething/eslint-config": "^3.1.0",
+    "babel-eslint": "^8.0.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "socket.io-client": "^2.0.3"
