--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint",
     "start": "NODE_ENV=development webpack --watch",
     "build:dev": "NODE_ENV=development webpack",
-    "build": "NODE_ENV=production webpack"
+    "build": "NODE_ENV=production webpack",
+    "prepublish": "NODE_ENV=production webpack"
   },
   "babel": {
     "presets": [
