--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "NODE_ENV=development webpack --watch",
     "build:dev": "NODE_ENV=development webpack",
     "build": "NODE_ENV=production webpack && babel lib --out-dir build",
-    "prepublish": "npm run build"
+    "prepublishOnly": "npm run build"
   },
   "babel": {
     "presets": [
@@ -36,9 +36,15 @@
     "webpack": "^3.5.6",
     "webpack-dev-server": "^2.7.1"
   },
+  "peerDependencies": {
+    "react": "*"
+  },
   "dependencies": {
+    "@researchgate/react-intersection-observer": "^0.6.0",
+    "intersection-observer": "^0.5.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
+    "react-dom": "^16.2.0",
     "socket.io-client": "^2.0.3"
   }
 }
