--- a/package.json
+++ b/package.json
@@ -27,21 +27,21 @@
   },
   "homepage": "https://github.com/DoSomething/puck-client#readme",
   "devDependencies": {
-    "@dosomething/babel-config": "^1.0.0",
+    "@dosomething/babel-config": "^2.2.2",
     "@dosomething/eslint-config": "^3.1.0",
-    "@dosomething/webpack-config": "^2.0.4",
+    "@dosomething/webpack-config": "^4.1.1",
     "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.0.0",
-    "eslint-loader": "^1.9.0",
-    "webpack": "^3.5.6",
-    "webpack-dev-server": "^2.7.1"
+    "babel-eslint": "7.2.3",
+    "eslint-loader": "^2.0.0",
+    "webpack": "^4.16.2",
+    "webpack-cli": "^3.1.0"
   },
   "dependencies": {
-    "@researchgate/react-intersection-observer": "^0.6.0",
+    "@researchgate/react-intersection-observer": "^0.7.3",
     "intersection-observer": "^0.5.0",
-    "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "react-dom": "^16.2.0",
-    "socket.io-client": "^2.0.3"
+    "prop-types": "^15.6.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "socket.io-client": "^2.1.1"
   }
 }
